# microtraining

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
src/micropackage/: big_brain_code.py
tests/: test_iq.py
