[metadata]
name = microtraining
description = todo
author = Alexander Nasuta
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9

[options]
packages =
    micropackage
python_requires = >=3.9
package_dir =
    =src
zip_safe = no

[options.package_data]
phantomderopfa = py.typed

[flake8]
max-line-length = 160