[metadata]
name = microtraining
description = A minimal example project for publishing Python Software Packages in 2025
author = Alexander Nasuta
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.11

[options]
packages =
    micropackage
python_requires = >=3.11
package_dir =
    =src
zip_safe = no

[options.package_data]
phantomderopfa = py.typed

[flake8]
max-line-length = 160